--- a/src/pages/common/footer/footer.css
+++ b/src/pages/common/footer/footer.css
@@ -1,2 +1,2 @@
-.footer{width: 100%;background: #e1e1e1;}
+.footer{width: 100%;background: #e1e1e1;margin-top: 20px;}
 .footer p{height: 40px;line-height: 40px;text-align: center}
